<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/backGround">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <fonts.cairoTextView
            android:id="@+id/title1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textColor="@color/black"
            android:text="@string/title"
            />

        <fonts.cairoTextView
            android:id="@+id/user1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textColor="@color/black"
            android:text="@string/username"

            />

        <fonts.cairoTextView
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textColor="@color/black"
            android:text="@string/password2"

            />


        <fonts.cairoTextView
            android:id="@+id/webAddress1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textColor="@color/black"
            android:text="@string/web"
            />

        <fonts.cairoTextView
            android:id="@+id/Note1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textColor="@color/black"
            android:text="@string/note"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">


            <fonts.cairoButton
                android:id="@+id/copyUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_sign_background"
                android:minHeight="0dp"
                android:text="@string/copyUser"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_12"
                />
            <fonts.cairoButton
                android:id="@+id/copyPass1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_sign_background"
                android:minHeight="0dp"
                android:text="@string/copyPassword"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_12"
                />
            <fonts.cairoButton
                android:id="@+id/deletePass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_sign_background"
                android:minHeight="0dp"
                android:text="@string/delete"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_12"


                />
        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>