<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <fonts.cairoTextView
        android:id="@+id/id_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="center"
        android:text="@string/newPass"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_18"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>



    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_pass"

        >

        <fonts.cairoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/black"

      />

    </RelativeLayout>
     <RelativeLayout
         android:id="@+id/entry_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/title"
         >
        <fonts.cairoEditText
            android:id="@+id/title_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:backgroundTint="#9E7BFF"
            android:inputType="text"


            />




    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/entry_container">

        <fonts.cairoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/black"


        />
    </RelativeLayout>
        <RelativeLayout
            android:id="@+id/username_Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            >
        <fonts.cairoEditText
            android:id="@+id/username_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:backgroundTint="#9E7BFF"
            android:inputType="text"

            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_Entry"
        >

        <fonts.cairoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:textColor="@color/black"/>


    </RelativeLayout>
        <RelativeLayout
            android:id="@+id/password_Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            >
        <fonts.cairoEditText
            android:id="@+id/password_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:backgroundTint="#9E7BFF"
            android:inputType="text"

            />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button_generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:paddingTop="155dp"
        >
        <fonts.cairoButton
            android:id="@+id/generate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate"
            android:textColor="@color/black"
            android:background="@drawable/ic_sign_background"
            android:textSize="@dimen/textsize_18"

            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_Entry">

        <fonts.cairoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/black"


        />
    </RelativeLayout>
        <RelativeLayout
            android:id="@+id/address_Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address">

        <fonts.cairoEditText
            android:id="@+id/address_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:backgroundTint="#9E7BFF"
            android:inputType="text"

            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/address_Entry">

        <fonts.cairoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textColor="@color/black"


        />
    </RelativeLayout>
        <RelativeLayout
            android:id="@+id/note_Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/note">
        <fonts.cairoEditText
            android:id="@+id/note_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:backgroundTint="#9E7BFF"
            android:inputType="text"
            />

</RelativeLayout>
</RelativeLayout>
    <RelativeLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:background="@color/backGround"

            >


        <fonts.cairoButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/black"
            android:background="@drawable/ic_sign_background"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:textSize="@dimen/textsize_18"

            />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="100dp">

        <fonts.cairoButton
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/ic_sign_background"
            android:paddingLeft="45dp"
            android:paddingRight="45dp"
            android:textColor="@color/black"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/textsize_18"
            />

    </RelativeLayout>
        </RelativeLayout>


    </RelativeLayout>

