<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashRegisterScreen"
    android:background="@drawable/gradient_background"
    android:orientation="vertical">


        <ProgressBar
            android:id="@+id/progressBarSplash"
            style="?android:attr/progressBarStyle"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminateTint="@color/icon"
            android:max="200"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_lock_black_24dp"
           />

        <fonts.cairoTextView
            android:layout_below="@id/progressBarSplash"
            android:id="@+id/AES"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AES"
            android:layout_centerInParent="true"
            android:textSize="@dimen/textsize_20"
            android:textColor="@color/black"

            />

        <fonts.cairoTextView
            android:layout_below="@id/AES"
            android:id="@+id/MFA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MFA"
            android:layout_centerInParent="true"
            android:textSize="@dimen/textsize_20"
            android:textColor="@color/black"
            android:paddingTop="20dp"
            />
        <fonts.cairoTextView
            android:layout_below="@id/AES"
            android:id="@+id/PHONE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_centerInParent="true"
            android:textSize="@dimen/textsize_20"
            android:textColor="@color/black"
            android:paddingTop="60dp"
            />


</RelativeLayout>

